# spotify-dashboard

./: .cache  .gitignore  README.md  api-calling.ipynb  data-retrieval.ipynb  docker-compose.yaml  lastfm-api.ipynb  main.py  pyproject.toml  retrieve_historical_data.py
airflow/dags/: artists_to_db.py  audio_features_to_db.py  faulty_dag.py  jsonl_to_pgsql.py  listening_history_2025_to_db.py  listening_history_to_db.py  loading_saved_library.py  simple_test_dag.py  test_postgres_connection.py
data_retrieval/: .cache  audio_features.py  last_fm_listening_history.py  last_fm_previous_day.py  spotify_artists.py  spotify_library.py  spotify_playlists.py
data_retrieval/utils/: utils.py
local_utils/: logging.py
logging_config/: config.json
notebook_plots/: artist_graph.ipynb  artist_network.html  habits_over_time.ipynb
notebooks/: api-calling.ipynb  artist_exploration_retrieval.ipynb  audio_features.txt  data-retrieval.ipynb  data_exploration.ipynb  group_by_week.ipynb  last_fm_exploration.ipynb  lastfm-api.ipynb  spotify-pt2.ipynb  spotify_v_personal.ipynb  test_plot.ipynb
notebooks/utils/: utils.py
streamlit/: main.py
streamlit/.streamlit/: config.toml
streamlit/html/: artist_network.html
streamlit/pages/: 1_dashboard.py  2_annual_listening.py  3_library_analysis.py
streamlit/plots/: genre_distribution.py  joy_divison.py  listening_dist_yearly.py  radar_chart.py  spotify_v_personal_rating.py  top_artists.py  top_songs_played.py
terraform/: main.tf
utils/: pyproject.toml
utils/src/utils/: last_fm.py  loading.py  logging.py  retrieval.py  spotify.py
(+1 files in other folders)
