[project]
name = "spotify-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow-providers-google>=19.1.0",
    "ipykernel>=7.1.0",
    "nbformat>=4.2.0",
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pyvis>=0.3.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "spotipy>=2.25.2",
    "streamlit>=1.52.0",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = [
    "utils",
]
