[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aadle", email = "" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
utils = "utils:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
